이미지 파일생성

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="logo">
-        <img class="panda" src="판다 얼굴.png" alt="판다마켓 로고 " />
+        <img class="panda" src="pictures/판다 얼굴.png" alt="판다마켓 로고 " />
         <p><a href="index.html">판다마켓</a></p>
       </div>
       <input
@@ -36,7 +36,7 @@
     </div>
     <div class="container">
       <section class="card-1">
-        <img class="pictures" src="hotitem.png" alt="hotitem" />
+        <img class="pictures" src="pictures/hotitem.png" alt="hotitem" />
         <div class="card-textgroup card-textgroup1">
           <div class="category">Hot item</div>
           <h1>
@@ -57,11 +57,11 @@
             구매하고 싶은 물품은 검색해서 <br />쉽게 찾아보세요
           </div>
         </div>
-        <img class="pictures" src="search.png" alt="search" />
+        <img class="pictures" src="pictures/search.png" alt="search" />
       </section>
 
       <section class="card-3">
-        <img class="pictures" src="register.png" alt="register" />
+        <img class="pictures" src="pictures/register.png" alt="register" />
         <div class="card-textgroup card-textgroup3">
           <div class="category">Register</div>
           <h1>판매를 원하는 <br />상품을 등록하세요</h1>
@@ -82,16 +82,16 @@
       <div class="policy">Privacy Policy &nbsp; &nbsp; FAQ</div>
       <div class="sns">
         <a href="https://www.facebook.com/?locale=ko_KR" target="_blank"
-          ><img src="facebook.png" alt="facebook-logo"
+          ><img src="pictures/facebook.png" alt="facebook-logo"
         /></a>
         <a href="https://twitter.com/?lang=ko" target="_blank"
-          ><img src="twitter.png" alt="twitter-logo"
+          ><img src="pictures/twitter.png" alt="twitter-logo"
         /></a>
         <a href="https://www.youtube.com/" target="_blank"
-          ><img src="youtube.png" alt="youtube-logo"
+          ><img src="pictures/youtube.png" alt="youtube-logo"
         /></a>
         <a href="https://www.instagram.com/" target="_blank"
-          ><img src="instargram.png" alt="instargram-logo"
+          ><img src="pictures/instargram.png" alt="instargram-logo"
         /></a>
       </div>
     </footer>
