privacy, faq 클릭시 페이지 이동 구현

--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
 
     <footer>
       <div class="company">@codeit - 2024</div>
-      <div class="policy">Privacy Policy &nbsp; &nbsp; FAQ</div>
+      <div class="policy">
+        <a href="privacy.html">Privacy Policy</a> &nbsp; &nbsp;
+        <a
+          href="faq.html
+        "
+          >FAQ</a
+        >
+      </div>
       <div class="sns">
         <a href="https://www.facebook.com/?locale=ko_KR" target="_blank"
           ><img src="pictures/facebook.png" alt="facebook-logo"
